fixed padding issues on mobile version

--- a/public/css/checkout.css
+++ b/public/css/checkout.css
@@ -154,7 +154,6 @@ th{
     .checkout-content{
         border-radius: 0px;
         margin:0px;
-        padding:0px;
         width:100%;
     }
     .checkout-form-content{
